<resources>
    <string name="app_name" translatable="false">Launch0</string>
    <string name="github" translatable="false">Github</string>
    <string name="lock_layout_description" translatable="false">lock layout description to be used a unique id to lock screen</string>
    <string name="olauncher_pro" translatable="false">Olauncher Pro</string>
    <string name="digital_minimalism" translatable="false"><u>Digital Minimalism</u></string>
    <string name="new_app_note_to_self" translatable="false"><u>New app: Note to Self</u></string>
    <string name="day_battery" formatted="false" translatable="false">%s\nbattery %d%%</string>
    <string name="tag_0" translatable="false">0</string>
    <string name="tag_1" translatable="false">1</string>
    <string name="tag_2" translatable="false">2</string>
    <string name="tag_3" translatable="false">3</string>
    <string name="tag_4" translatable="false">4</string>
    <string name="tag_5" translatable="false">5</string>
    <string name="tag_6" translatable="false">6</string>
    <string name="tag_7" translatable="false">7</string>
    <string name="tag_8" translatable="false">8</string>
    <string name="time_spent_min" translatable="false"><b>%1$sm</b></string>
    <string name="time_spent_hour" translatable="false">%1$sh %2$sm</string>
    <string name="app">App</string>
    <string name="set_as_default_launcher">Set as default launcher</string>
    <string name="set_as_default_launcher_u"><u>Set as default launcher</u></string>
    <string name="set_as_default_launcher_first">Set Launch0 default first</string>
    <string name="app_text_color">Text color</string>
    <string name="double_tap_to_lock_screen">Double tap to lock</string>
    <string name="admin_permission_message">Launch0 promises to use lock screen permission responsibly. Launch0 does not collect or share any data.</string>
    <string name="about">About</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="change_default_launcher">Change default launcher</string>
    <string name="privacy">Privacy</string>
    <string name="share">Share</string>
    <string name="share_now">Share now</string>
    <string name="rate">Rate</string>
    <string name="rate_now">Rate now</string>
    <string name="follow">Follow</string>
    <string name="email">Email</string>
    <string name="donate">Donate</string>
    <string name="apps_on_home_screen">Apps on home screen</string>
    <string name="hourly_wallpaper_update">New wallpaper every hour</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="center">Center</string>
    <string name="home_layout_alignment">App alignment</string>
    <string name="swipe_left_app">Swipe left app</string>
    <string name="swipe_right_app">Swipe right app</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="okay">Okay</string>
    <string name="cool">Cool!</string>
    <string name="auto_show_keyboard">Auto show keyboard</string>
    <string name="hide">Hide</string>
    <string name="status_bar">Status bar on top</string>
    <string name="rename">Rename</string>
    <string name="show_date_time">Show date time</string>
    <string name="days_left_widget">Days left widget</string>
    <string name="calendar_widget">Calendar widget</string>
    <string name="calendar_today">Today</string>
    <string name="calendar_all_day">All day</string>
    <string name="calendar_now">now</string>
    <string name="calendar_untitled_event">(No title)</string>
    <string name="calendar_no_events">No more events today</string>
    <string name="calendar_grant_access">Tap to show today\'s schedule</string>
    <string name="calendar_permission_denied">Allow calendar access to use this widget</string>
    <string name="calendar_in_minutes">in %1$dm</string>
    <string name="calendar_in_hours">in %1$dh</string>
    <string name="calendar_in_hours_minutes">in %1$dh %2$dm</string>
    <plurals name="calendar_events">
        <item quantity="one">%d event</item>
        <item quantity="other">%d events</item>
    </plurals>
    <string name="show_app_icons">Show app icons</string>
    <string name="show_app_names">Show app names</string>
    <string name="icon_size">Icon size</string>
    <string name="icon_shape">Icon shape</string>
    <string name="shape_default">Default</string>
    <string name="shape_circle">Circle</string>
    <string name="shape_square">Square</string>
    <string name="shape_squircle">Squircle</string>
    <string name="shape_teardrop">Teardrop</string>
    <string name="appearance">Appearance</string>
    <string name="gestures">Gestures</string>
    <string name="theme_mode">Theme mode</string>
    <string name="system_default">System</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="welcome_to_olauncher_settings">Welcome to the settings!
        \n\nRemember, if you have any questions, our About page has the answer.</string>
    <string name="rate_us_message">Hi, you won\'t see this message again.
        \n\nIf you\'re finding Launch0 useful, could you please leave a 5-star review? It\'ll mean the world to us. Thank you!</string>
    <string name="share_message">We need your help! We believe everyone should know about Launch0 and its benefits, but we can\'t do it alone.
        \n\nCould you please share Launch0 with your friends, family, and followers? Thank you for your support!</string>
    <string name="keyboard_message">Hi, keyboard is the fastest way to find and launch apps in Launch0. Can we request you to keep this On for a few more days and then decide?
        \n\nThe choice is always yours.</string>
    <string name="digital_wellbeing_message">If you want to set time limits for certain apps, Digital Wellbeing feature of Android can help you do it.           Please search for Digital Wellbeing in your phone settings and enable it.</string>
    <string name="app_usage_message">To show/hide your screen time on the home screen, please allow or disallow the app usage permission.
        \n\nNote: No app usage data is collected. Everything is processed on your device.</string>
    <string name="pro_message">Launch0 is a fork of Olauncher. Check out the original Olauncher and its pro version for extra features like weather, widgets, fonts, folders, AMOLED wallpapers, and so on.</string>
    <string name="wallpaper_message">Launch0 offers beautiful new wallpapers every hour. Give your homescreen a fresh new look throughout the day, for free!
        \n\nWant to try it?</string>
    <string name="accessibility_service_description">The accessibility permission is required to enable double tap to lock. Any data acquired by Launch0 via this service will not leave your device.</string>
    <string name="support_olauncher_for_free">Support Launch0 for free by using our Amazon affiliate link.</string>
    <string name="support_olauncher_message">Every time you buy something using our link, we get a small commission. Please save the link and use it whenever you shop online.\nThank you!</string>
    <string name="open">Open link</string>
    <string name="copy">Copy</string>
    <string name="close">Close</string>
    <string name="not_now">Not now</string>
    <string name="public_roadmap">Launch0 public roadmap</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Developer</string>
    <string name="roadmap">Roadmap</string>
    <string name="date">Date</string>
    <string name="date_only">Date only</string>
    <string name="bottom_on">Bottom: On</string>
    <string name="bottom_off">Bottom: Off</string>
    <string name="please_set_olauncher_as_default_first">Please set Launch0 as default first</string>
    <string name="affiliate">Affiliate</string>
    <string name="tip_start_typing_for_rename">Tip: Start typing for app RENAME option</string>
    <string name="hidden_apps_message">Note: Tap on \'Launch0\' at the top of this Settings page to find your hidden apps.\n\nMore details available in our About page.</string>
    <string name="swipe_down_for">Swipe down for</string>
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="accessibility_disclosure">Please turn on or off Launch0\'s accessibility service in your device\'s settings to enable or disable this feature.
    \n\nPlease note that this service is only used to let you turn off your device\'s screen using the double tap gesture. Our accessibility service does not collect or share any data.</string>
    <string name="accept">Accept</string>
    <string name="permission">Permission</string>
    <string name="double_tap_lock">Double tap to lock</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="not_working"><u>Not working?</u></string>
    <string name="info">Info</string>
    <string name="delete">Uninstall</string>
    <string name="text_size">Text size</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="please_turn_on_double_tap_to_unlock">Please turn on double tap to lock</string>
    <string name="launcher_failed_to_lock_device">Launch0 failed to lock device.\nPlease check your app settings.</string>
    <string name="long_press_to_select_app">Long press to select app</string>
    <string name="unable_to_open_app">Unable to open app</string>
    <string name="copied">Copied</string>
    <string name="system_app_cannot_delete">System app, cannot delete</string>
    <string name="type_a_new_app_name_first">Type a new app name first</string>
    <string name="app_not_found">App not found</string>
    <string name="unable_to_launch_app">Unable to launch app</string>
    <string name="search_for_Launcher_or_home_app">Search for Launcher or Home app</string>
    <string name="swipe_left_app_enabled">Swipe left app enabled</string>
    <string name="swipe_right_app_enabled">Swipe right app enabled</string>
    <string name="swipe_left_app_disabled">Swipe left app disabled</string>
    <string name="swipe_right_app_disabled">Swipe right app disabled</string>
    <string name="your_wallpaper_will_update_shortly">Your wallpaper will update shortly</string>
    <string name="screen_time">Screen time</string>
    <string name="dt_you_waited">You waited. Tap to open.</string>
    <string name="dt_opens_today">Opens today</string>
    <string name="dt_last_open">Last open</string>
    <string name="dt_next_wait">Next wait</string>
    <string name="dt_waits_double">Waits double with every open today.</string>
    <string name="dt_turn_back">Turn back</string>
    <string name="dt_turn_back_caption">Going back resets the timer</string>
    <string name="dt_aphorism">Are you using your phone,\nor is your phone using you?</string>
    <string name="notes_title">Notes</string>
    <string name="notes_back">Back</string>
    <string name="notes_back_symbol" translatable="false">‹</string>
    <string name="notes_empty_hint">Jot anything here. Notes, links, images — like a chat with yourself.</string>
    <string name="notes_input_hint">Write something…</string>
    <string name="notes_send">Send</string>
    <string name="notes_add_image">Add image</string>
    <string name="notes_image_desc">Image</string>
    <string name="cancel">Cancel</string>
    <string name="notes_search">Search</string>
    <string name="notes_record_desc">Record a voice note</string>
</resources>